# oxideav-webp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
benches/: vp8l_decode.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: oxideav_encode_webp_decode_lossless.rs  oxideav_encode_webp_decode_lossy.rs  vp8l_lossless_roundtrip.rs  webp_encode_oxideav_decode.rs  webp_encode_oxideav_decode_lossless.rs  webp_encode_oxideav_decode_lossy.rs
fuzz/src/: lib.rs
src/: decoder.rs  demux.rs  encoder.rs  encoder_anim.rs  encoder_vp8.rs  error.rs  lib.rs  registry.rs  riff.rs
src/vp8l/: bit_reader.rs  encoder.rs  huffman.rs  mod.rs  transform.rs
tests/: animated_disposal_blend.rs  animated_encode.rs  external_roundtrip.rs  input_pixfmt_extensions.rs  lossless_corpus.rs  lossy_corpus.rs  metadata_roundtrip.rs  vp8_lossy_psy_rdo.rs  vp8_lossy_roundtrip.rs  vp8l_decode_handcrafted_extra.rs  vp8l_encode_roundtrip.rs  vp8l_fuzz_simple_huffman_leak.rs  vp8l_handcrafted.rs  vp8l_huffman_kraft_fuzz_crash.rs  vp8l_huffman_unit.rs  vp8l_libwebp_decode_issue_8.rs  vp8l_meta_huffman.rs  vp8l_near_lossless.rs  vp8l_rdo.rs  vp8l_viterbi_lz77.rs  vp8x_encode.rs
tests/fixtures/: fuzz_crash_7bd80cbd_huffman_kraft.input  issue_8_pixel_266.expected_rgba
