[package]
name = "oxideav-webp"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-webp"
authors = ["Mark Karpeles"]
description = "Pure-Rust WebP image codec for oxideav — RIFF VP8 lossy + VP8L lossless + VP8X extended + ALPH + animation decode, plus VP8 lossy and VP8L lossless single-frame encode"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-webp"
keywords = ["multimedia", "image", "webp", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
oxideav-container = "0.1"
oxideav-vp8 = "0.0"
