[package]
name = "oxideav-webp"
version = "0.0.10"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-webp"
authors = ["Mark Karpeles"]
description = "Pure-Rust WebP image codec for oxideav — RIFF VP8 lossy + VP8L lossless + VP8X extended + ALPH + animation decode, plus VP8 lossy and VP8L lossless single-frame encode"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-webp"
keywords = ["multimedia", "image", "webp", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-webp` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes a free-standing
# `decode_webp` / `encode_vp8l_argb` API plus local `WebpImage`,
# `WebpFrame`, `WebpError` types and never references `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }
# Cascade the registry-vs-standalone choice through to `oxideav-vp8`:
# when our `registry` feature is on we also pull in vp8's `registry`
# feature (so its `Decoder`/`Encoder`/IVF surface is available);
# when ours is off, vp8 is built without `oxideav-core` too.
oxideav-vp8 = { version = "0.1.7", default-features = false }

[features]
default = ["registry"]

# Wires up the codec / decoder / encoder / demuxer trait
# implementations against `oxideav-core` so the crate can plug into
# the `oxideav` framework registry. Cascades `registry` through to
# `oxideav-vp8`. Default-on; turn off for image-library use-cases that
# just want the standalone `decode_webp` API.
registry = ["dep:oxideav-core", "oxideav-vp8/registry"]

[dev-dependencies]
# `lossy_corpus` integration test compares our VP8-lossy decode of the
# libwebp-encoded `tests/fixtures/lossy_corpus/*` corpus against the
# matching `expected.png` ground truth, so it needs a PNG decoder.
oxideav-png = "0.1"
# `vp8l_decode` bench harness — see `benches/vp8l_decode.rs`. Pinned to
# the 0.5 line to track the current major; no other criterion users in
# the workspace yet so the lockfile picks the latest 0.5.x.
criterion = "0.5"
# `external_roundtrip` integration test `dlopen`s libwebp at runtime
# to roundtrip oxideav-encoded → libwebp-decoded → libwebp-encoded →
# oxideav-decoded. Mirrors the fuzz crate's `libwebp` shim shape but
# kept private to the test file so the main crate doesn't grow a
# dev-dep on the fuzz crate. Test skips silently when libwebp isn't
# installed.
libloading = "0.8"

# Criterion's own runner. `harness = false` opts out of the default libtest
# harness so criterion's CLI (`cargo bench -- --measurement-time …`) works.
[[bench]]
name = "vp8l_decode"
harness = false
