[package]
name = "oxideav-webp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
oxideav-core = "0.1"
# libloading is the only libwebp interop: each cross-decode harness
# `dlopen`s the system-installed libwebp at startup. No `*-sys` crate,
# no libwebp source pulled into the dep tree. Harnesses skip silently
# when libwebp isn't installed (see fuzz/src/lib.rs).
libloading = "0.8"

[dependencies.oxideav-webp]
path = ".."

[lib]
name = "oxideav_webp_fuzz"
path = "src/lib.rs"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "vp8l_lossless_roundtrip"
path = "fuzz_targets/vp8l_lossless_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "webp_encode_oxideav_decode_lossless"
path = "fuzz_targets/webp_encode_oxideav_decode_lossless.rs"
test = false
doc = false

[[bin]]
name = "oxideav_encode_webp_decode_lossless"
path = "fuzz_targets/oxideav_encode_webp_decode_lossless.rs"
test = false
doc = false

[[bin]]
name = "webp_encode_oxideav_decode_lossy"
path = "fuzz_targets/webp_encode_oxideav_decode_lossy.rs"
test = false
doc = false

[[bin]]
name = "oxideav_encode_webp_decode_lossy"
path = "fuzz_targets/oxideav_encode_webp_decode_lossy.rs"
test = false
doc = false
